--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: jekyll example
 email: alex@worldx3.com
 description: Basic template for jekyll
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/jekyll-example" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
