--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: jekyll example
 email: alex@worldx3.com
 description: Basic template for jekyll
-baseurl: "/pqlco-stylesheet" # /pqlco-stylesheet
+baseurl: "/jekyll-example" # /pqlco-stylesheet
 url: "." # the base hostname & protocol for your site
 
 markdown: kramdown
