--- a/_config.yml
+++ b/_config.yml
@@ -25,3 +25,9 @@ plugins:
 authors:
   gruncho:
     name: gruncho
+
+twitter: gruncho
+instagram: gruncho
+telegram: gruntxo
+dribbble: gruncho
+github: gruncho
